--- a/public/404.html
+++ b/public/404.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Page doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  body {
+ /* body {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
+  }*/
+
+  body {
+    background-color: #022444;
+    color: #022444;
+    text-align: center;
+    font-family: arial, sans-serif;
+    margin: 0;
+    background-position: top left;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url('https://s3.amazonaws.com/noel-videos/popped-dk.jpg');
+    padding:2em;
   }
 
   div.dialog {
@@ -26,13 +39,14 @@
     border-top: #B00100 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
+    background-color: rgba(255,255,255, .9);
+    padding: 7px 1em 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
+  h2 {font-size: 100%; line-height: 1.3em;}
   h1 {
-    font-size: 100%;
+    /*font-size: 100%;*/
     color: #730E15;
     line-height: 1.5em;
   }
@@ -40,7 +54,7 @@
   div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
-    background-color: #F7F7F7;
+    background-color: #022444;
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -51,6 +65,15 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+
+  a {
+    margin: 0 0 1em;
+    padding: 1em;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 17px;
+  }
   </style>
 </head>
 
@@ -58,10 +81,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h2>The page you were looking for doesn't exist.</h2>
+      <h1>Noel B. Leonard can help!</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p><a href="https://attorney-leonard.com">Click here to follow us back!</a></p>
   </div>
 </body>
 </html>
