--- a/public/500.html
+++ b/public/500.html
@@ -5,62 +5,72 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+    background-color: #022444;
+    color: #b2cfe7;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
+    background-position: top left;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url('https://s3.amazonaws.com/noel-videos/popped-dk.jpg');
+    padding:2em;
   }
 
   div.dialog {
     width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+    max-width: 30em;
+    /*margin: 4em auto 0;*/
+    margin-top: 4em;
+    border: 1px solid red;
+    border-left-color: #dfdfdf;
+    border-right-color: #dfdfdf;
+    border-bottom-color: #dfdfdf;
+    padding: 1.4em;
+    background-color: white;
+    box-shadow: 0 8px 8px rgba(50, 50, 50, 0.17);
   }
 
   div.dialog > div {
     border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    background-color: #022444;
+    padding: 1em 1.4em 2em;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.2);
   }
 
+  h3 {
+    color: red;
+    margin-top:0;
+  }
   h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+    color: white;
+    margin-bottom:35px;
   }
 
-  div.dialog > p {
+  a {
     margin: 0 0 1em;
     padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    color: #022444;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 1em;
+    border: 1px solid white;
+    background-color: white;
   }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
+  <div class="container">
   <div class="dialog">
+    <h3>Looks like you had an accident.</h3>
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Noel B. Leonard can help!</h1>
+      <p><a href="https://attorney-leonard.com">Click here to follow us back!</a></p>
     </div>
-    <a href="https://attorney-leonard.com"><p>Follow us home, and try another way!</p></a>
+  </div>
   </div>
 </body>
 </html>
